components/policies/development/konflux-rbac/restrict-binding-serviceaccounts-denylist/create/.chainsaw-test/resources/invalid-rolebinding-model.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: invalid-serviceaccounts-model-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: konflux-model-bot-actions
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: Group
  name: my-group
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: my-user
- apiGroup: ""
  kind: ServiceAccount
  name: my-serviceaccount
