components/policies/development/konflux-rbac/restrict-binding-serviceaccounts-denylist/create/.chainsaw-test/chainsaw-assert-validatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: restrict-bindings-serviceaccounts-denylist-create.konflux-ci.dev
status:
  observedGeneration: 1
  typeChecking: {}
